--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-scanpy
-shap
-velocyto
+scanpy  # 1.10.0
+shap  # 0.45.0
+velocyto  # 0.17.17
+
+#  We used the following Python software libraries for benchmarking and comparison.
+#  celloracle (v0.18.0), cefcon (v0.2.1), pyscenic (v0.12.1), cell-gears (v0.1.2), cpa-tools (v0.8.7)
