--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,6 +7,9 @@ version: 2
 # Set the OS, Python version and other tools you might need
 build:
   os: ubuntu-22.04
+  jobs:
+    pre_build:
+      - echo "nbsphinx_execute = 'never'" >> tutorials/conf.py
   tools:
     python: "3.10"
     # You can also specify other tool versions:
