--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,6 +9,9 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.10"
+  jobs:
+    post_install:
+      - python -m ipykernel install --user --name=python3
     # You can also specify other tool versions:
     # nodejs: "20"
     # rust: "1.70"
